tests/cheri-ci/expected/0075-funscoped_static.error.c.expected
cheri-ci/0075-funscoped_static.error.c:14:10: error: use of undeclared identifier 'y'
  return y; //f(4); // should return 10
         ^
ยง6.5.1#2: 
2   An identifier is a primary expression, provided it has been declared as designating an
    object (in which case it is an lvalue) or a function (in which case it is a function
    designator).91)
